--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
   },
   "homepage": "https://github.com/Pertoldi/DiginamicProjetNode#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
     "helmet": "^4.6.0",
     "mongoose": "^6.0.11",
+    "mongoose-unique-validator": "^3.0.0",
     "nodemon": "^2.0.14"
   }
 }
