--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "bcrypt": "^5.0.1",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "fs": "^0.0.1-security",
     "helmet": "^4.6.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.11",
     "mongoose-unique-validator": "^3.0.0",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.14"
   }
 }
