--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^6.0.11",
     "mongoose-unique-validator": "^3.0.0",
     "multer": "^1.4.3",
-    "nodemon": "^2.0.14"
+    "nodemon": "^2.0.14",
+    "path": "^0.12.7"
   }
 }
